--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -1,3 +1,3 @@
 {
-  "txt_welcome": "Welcome to Uzbekistan"
+  "txt_welcome": "Flutter is an open-source Ul software development kit created by Google\n\n"
 }
