--- a/assets/translation/ja-JPN.json
+++ b/assets/translation/ja-JPN.json
@@ -1,3 +1,3 @@
 {
-  "txt_welcome": "Flutterは, Googleが作成したオープンソースULソフトウェア開発キットです"
+  "txt_flutter": "Flutterは, Googleが作成したオープンソースULソフトウェア開発キットです"
 }
